# dissent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  dissent.yml  pr-checks.yml  publish-pypi.yml
dissent/: __init__.py  cli.py  debate.py  diff.py  github.py  github_cli.py  llm.py  output.py  personas.py
examples/: react_team.yaml
tests/: test_cli.py  test_debate.py  test_diff.py  test_github.py  test_llm.py  test_output.py  test_personas.py
